# algorithms-and-data-structures-in-rust

./: .gitignore  Cargo.toml  README.md
hashmap/: Cargo.toml
hashmap/src/: hasher.rs
hashtables/: Cargo.toml
hashtables/src/: main.rs  problem1.rs
queue/: Cargo.toml
queue/examples/: hot_potato.rs
queue/src/: queue.rs
stack/: Cargo.toml
stack/examples/: decimal_to_binary.rs  par_matcher.rs  usage.rs
stack/src/: lib.rs  main.rs  stack.rs
