[workspace]
members = ["stack", "queue", "hashmap"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Unlicense"
authors = ["Wassim Mansouri <you@example.com>"]
version = "0.1.0"
repository = "https://github.com/wassimans/algorithmis-data-structures-rust"
readme = "README.md"
categories = ["data-structures", "education"]
keywords = ["stack", "data-structure", "rust"]
